# Roudy-Player

./: .gitignore  CLAUDE.md  Cargo.toml
docs/plans/: ui_thread.md
docs/research_reports/: CPAL-GUIDE.md  CPAL-GUIDE_br.html
docs/soundcloud api/routes/: playlist.md  playlist_tracks.md  profile.md  track_metadata.md  track_stream_urls.md
src/: credentials_manager.rs  global_state.rs  main.rs  types.rs
src/api/: mod.rs  request_handler.rs  server.rs  soundcloud.rs
src/api/soundcloud/: auth_client.rs  mod.rs  playlist.rs  playlist_tracks.rs  profile.rs  request_handler.rs  streams.rs
src/api/soundcloud/playlists/: mod.rs  playlist.rs  playlist_tracks.rs
src/api/soundcloud/tracks/: mod.rs  track_hls_playlist.rs  track_hls_segments.rs  track_metadata.rs  track_urls.rs
src/audio/: audio_handler.rs  decoder.rs  mod.rs  player.rs
src/auth/: credentials_manager.rs  mod.rs  server.rs
src/event/: api_output_listener.rs  auth_server_listener.rs  credentials_output_listener.rs  eloop.rs  keypress_output_listener.rs  keypress_polling.rs  mod.rs  polling.rs
src/event/keybind/: audio_keybinds.rs  homepage_keybinds.rs  keypress_output_listener.rs  mod.rs
src/helpers/: mod.rs  parse_query_params.rs  refresh_token.rs
src/layout/: mod.rs  ui.rs
src/layout/components/: header.rs  mod.rs  track_bar.rs
src/layout/pages/: errors_status.rs  home.rs  login.rs  mod.rs  profile.rs  test.rs
src/layout/pages/sub_pages/home/: mod.rs  playlist_tracks.rs  playlists.rs
